[gd_scene load_steps=4 format=3 uid="uid://bka8di541wuxy"]

[ext_resource type="Script" path="res://Menu/Objectif_Screen/Objectif_Screen.gd" id="1_wsrdm"]
[ext_resource type="FontFile" uid="uid://bt3ibxabl67vp" path="res://Fonts/determination-extended.ttf" id="2_ww0xo"]
[ext_resource type="Theme" uid="uid://b3v1lj5nljho5" path="res://Themes/Button/Menu_Confirm_Button.tres" id="3_njgh0"]

[node name="Objectif_Screen" type="CanvasLayer"]
script = ExtResource("1_wsrdm")

[node name="Black_Background_ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Objectif" type="Node2D" parent="."]
position = Vector2(0, 1)

[node name="Objectif_Title" type="RichTextLabel" parent="Objectif"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 547.0
offset_top = 66.0
offset_right = 734.0
offset_bottom = 114.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_ww0xo")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "OBJECTIF"

[node name="Underline_ColorRect" type="ColorRect" parent="Objectif"]
offset_left = 549.0
offset_top = 103.0
offset_right = 717.0
offset_bottom = 107.0
metadata/_edit_use_anchors_ = true

[node name="Objectif_Text" type="RichTextLabel" parent="Objectif"]
offset_left = 191.0
offset_top = 146.0
offset_right = 1135.0
offset_bottom = 220.0
theme_override_fonts/normal_font = ExtResource("2_ww0xo")
bbcode_enabled = true
fit_content = true

[node name="Information" type="Node2D" parent="."]
position = Vector2(0, 1)

[node name="Information_Title" type="RichTextLabel" parent="Information"]
offset_left = 499.0
offset_top = 222.0
offset_right = 794.0
offset_bottom = 286.0
theme_override_fonts/normal_font = ExtResource("2_ww0xo")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "INFORMATIONS"

[node name="Underline_ColorRect" type="ColorRect" parent="Information"]
offset_left = 491.0
offset_top = 259.0
offset_right = 782.0
offset_bottom = 263.0
metadata/_edit_use_anchors_ = true

[node name="Information_Text" type="RichTextLabel" parent="Information"]
offset_left = 192.0
offset_top = 310.0
offset_right = 1120.0
offset_bottom = 591.0
theme_override_fonts/normal_font = ExtResource("2_ww0xo")
bbcode_enabled = true

[node name="Confirm_Button" type="Button" parent="."]
offset_left = 536.0
offset_top = 608.0
offset_right = 752.0
offset_bottom = 680.0
theme = ExtResource("3_njgh0")
theme_override_fonts/font = ExtResource("2_ww0xo")
theme_override_font_sizes/font_size = 40
text = "Compris"

[connection signal="pressed" from="Confirm_Button" to="." method="_on_confirm_button_pressed"]
